--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,3 +1,5 @@
+# .github/workflows/python-ci.yml
+
 name: Python CI
 
 on:
@@ -20,31 +22,37 @@ jobs:
       with:
         python-version: 3.10
 
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python -
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest
+        poetry install
 
     - name: Run pytest
       run: |
-        pytest
+        poetry run pytest
 
   lint:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: 3.10
 
-    - name: Install pylint
+    - name: Install Poetry
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
+        curl -sSL https://install.python-poetry.org | python -
+
+    - name: Install dependencies
+      run: |
+        poetry install
 
     - name: Run pylint
       run: |
-        pylint life_expectancy/
+        poetry run pylint life_expectancy/
