--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,17 +22,13 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python -
-
     - name: Install dependencies
       run: |
-        poetry install
+        pip install pandas
+        pip install pytest pytest-cov
 
     - name: Run pytest
-      run: |
-        poetry run pytest
+      run: pytest
 
   lint:
     runs-on: ubuntu-latest
@@ -45,14 +41,11 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python -
-
     - name: Install dependencies
       run: |
-        poetry install
+        pip install pandas
+        pip install pylint
 
     - name: Run pylint
       run: |
-        poetry run pylint life_expectancy/
+        pylint life_expectancy/
