:bug: FIX: ci pipeline

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,8 +43,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install pandas
-        pip install pylint
+        pip install pandas pylint pytest
 
     - name: Run pylint
       run: |
