--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,25 @@ jobs:
         pip install pytest pytest-cov
 
     - name: Run pytest
-      run: pytest
+      run: |
+        pytest --cov
+        coverage report
+        coverage xml
+
+    - name: Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.0.2
+      with:
+        filename: coverage.xml
+        badge: true
+        format: 'markdown'
+        output: 'both'
+
+    - name: Add Coverage PR Comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      if: github.event_name == 'pull_request'
+      with:
+        recreate: true
+        path: code-coverage-results.md
 
   lint:
     runs-on: ubuntu-latest
