--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,9 @@ name = "assignments"
 version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.8"
-description = "First assignment of the Foundations Learning Path"
+description = "Foundations Learning Path Assignements"
 authors = [
+    {name = "Nuno Beires<nuno.beires@daredata.engineering>"},
     {name = "Fernando Cordeiro<fernando@daredata.engineering>"}
 ]
 dependencies = ["pandas"]
